pushed from office 3-21 callback function

--- a/basics/index.html
+++ b/basics/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p id="clock"></p>
+    <button onclick="stopTimer()">Stop clock</button>
+    <button onclick="startTimer()">TIme Start</button>
+    <script src="./clock.js"></script>
 </body>
 </html>
