--- a/basics/index.html
+++ b/basics/index.html
@@ -9,6 +9,17 @@
     <p id="clock"></p>
     <button onclick="stopTimer()">Stop clock</button>
     <button onclick="startTimer()">TIme Start</button>
+
+    <br>
+    <br>
+    <br>
+
+    <p>
+        <span id="name">Name:</span>
+        <span id="count">0</span>
+    </p>
+    <!-- add event too run js -->
+    <button onclick="event">Click me</button>
     <script src="./clock.js"></script>
 </body>
 </html>
